--- a/app/src/main/res/layout/activity_local_post.xml
+++ b/app/src/main/res/layout/activity_local_post.xml
@@ -44,11 +44,16 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
-                tools:text="Local Posts"
+                tools:text="Export"
                 android:text="@{viewModel.postSize}"
-                android:textColor="@color/white_50"
+                android:textColor="@color/bright_blue"
                 android:layout_gravity="center"
                 android:textSize="18sp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="@{()->viewModel.exportDatabse()}"
+
+
                 android:layout_height="wrap_content" />
 
             <TextView
