--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -2,7 +2,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+       <import type="android.text.TextUtils"/>
         <variable
             name="item"
             type="com.applifehack.knowledge.data.entity.Post" />
@@ -82,6 +82,7 @@
                 android:onClick="@{(view)->viewModel.shareClick(view,item)}"
                 android:src="@drawable/ic_share"
                 android:tint="@color/white_75"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -92,10 +93,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
 
-                android:src='@{item.liked?@drawable/ic_liked:@drawable/ic_like}'
+                android:src="@drawable/ic_time"
                 android:tint="@color/white_75"
                 android:id="@+id/imglike"
-                android:onClick="@{()->viewModel.likeClick(item)}"
+
+                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
+
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvLinkCount"
@@ -109,7 +112,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
-                android:text="@{item.formatLikes}"
+                android:text="@{item.duration}"
+                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textColor="@color/light_gray"
