--- a/app/src/main/res/layout/item_cat_video.xml
+++ b/app/src/main/res/layout/item_cat_video.xml
@@ -2,7 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+       <import type="android.text.TextUtils"/>
         <variable
             name="item"
             type="com.applifehack.knowledge.data.entity.Post" />
@@ -59,6 +59,7 @@
             android:drawablePadding="@dimen/padding_base_h"
             android:letterSpacing="0.1"
             android:text="@{item.duration}"
+            goneUnless="@{!TextUtils.isEmpty(item.duration)}"
             tools:text="1:45"
             android:textColor="@color/light_gray"
             android:layout_alignBottom="@id/search_tab_results_video_row_image"
