--- a/app/src/main/res/layout/item_quote_list.xml
+++ b/app/src/main/res/layout/item_quote_list.xml
@@ -2,7 +2,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <import type="com.applifehack.knowledge.util.ShareType"/>
         <variable
             name="item"
             type="com.applifehack.knowledge.data.entity.Post" />
@@ -38,7 +38,8 @@
             android:id="@+id/vBottom"
             android:layout_marginTop="-5dp"
             android:background="@color/darker_gray"
-            android:layout_height="16dp"/>
+            android:layout_height="16dp"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linBottom"
@@ -91,6 +92,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textColor="@color/light_gray"
+                android:visibility="gone"
                 android:layout_height="wrap_content" />
 
 
@@ -147,5 +149,39 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_gravity="bottom"
+            android:id="@+id/shareLayout"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:padding="@dimen/eight"
+            android:background="@drawable/bg_item_feed_bottom"
+            android:layout_above="@id/vBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+
+            >
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                app:srcCompat="@drawable/play_store" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+
+                app:srcCompat="@drawable/web_app_icon" />
+        </LinearLayout>
     </RelativeLayout>
 </layout>
