--- a/app/src/main/res/layout/item_quotes_list.xml
+++ b/app/src/main/res/layout/item_quotes_list.xml
@@ -38,7 +38,9 @@
             android:id="@+id/vBottom"
             android:layout_marginTop="-5dp"
             android:background="@color/darker_gray"
-            android:layout_height="16dp"/>
+            android:layout_height="16dp"
+
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linBottom"
@@ -90,6 +92,7 @@
                 android:text="@{item.formatLikes}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
                 android:textColor="@color/light_gray"
                 android:layout_height="wrap_content" />
 
@@ -146,5 +149,40 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_gravity="bottom"
+            android:id="@+id/shareLayout"
+
+
+            android:padding="@dimen/eight"
+            android:background="@drawable/bg_item_feed_bottom"
+            android:layout_above="@id/vBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+
+
+            >
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                app:srcCompat="@drawable/play_store" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+
+                app:srcCompat="@drawable/web_app_icon" />
+        </LinearLayout>
     </RelativeLayout>
 </layout>
