--- a/app/src/main/res/layout/item_slide_post.xml
+++ b/app/src/main/res/layout/item_slide_post.xml
@@ -2,7 +2,7 @@
 <layout>
 
     <data>
-
+       <import type="com.applifehack.knowledge.data.entity.PostType"/>
         <variable
             name="item"
             type="com.applifehack.knowledge.data.entity.Post" />
@@ -34,6 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:onClick="@{()->viewModel.postClick(item)}"
+        android:visibility="gone"
+        goneUnless="@{item.postType==PostType.VIDEO}"
         android:src="@drawable/ic_play_circle_outline_black_24dp"
         android:layout_height="wrap_content" />
 
