--- a/app/src/main/res/layout/item_slide_post.xml
+++ b/app/src/main/res/layout/item_slide_post.xml
@@ -2,7 +2,7 @@
 <layout>
 
     <data>
-
+        <import type="com.applifehack.knowledge.data.entity.PostType"/>
         <variable
             name="item"
             type="com.applifehack.knowledge.data.entity.Post" />
@@ -11,67 +11,71 @@
             name="viewModel"
             type="com.applifehack.knowledge.ui.fragment.slidepost.SlidePostVM" />
     </data>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:id="@+id/feed_carousel_slide_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:onClick="@{()->viewModel.postClick(item)}"
-    android:background="@android:color/black">
-
-    <ImageView
-        android:id="@+id/feed_carousel_slide_image"
+        android:id="@+id/feed_carousel_slide_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top"
-        android:adjustViewBounds="true"
-        android:alpha="@dimen/feed_carousel_slide_alpha"
-        android:gravity="center"
-        android:src="@drawable/bg_exploremore_en"
-        srcImageUrl="@{item.imageUrl}"
-        android:scaleType="centerCrop" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
         android:onClick="@{()->viewModel.postClick(item)}"
-        android:src="@drawable/ic_play_circle_outline_black_24dp"
-        android:layout_height="wrap_content" />
+        android:background="@android:color/black">
 
-    <LinearLayout
-        android:id="@+id/feed_carousel_slide_wrapper"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/feed_carousel_short_slide_wrapper_marginTop"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/padding_base_2x"
-        android:paddingEnd="@dimen/padding_base_2x"
-        android:paddingBottom="@dimen/padding_base_4x">
-
-        <TextView
-            android:id="@+id/feed_carousel_slide_tag"
-            style="@style/FeedCarouselTagLabel"
-            android:fontFamily="@font/open_sans_light"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_base"
-            android:text="@{item.catName}"
-            android:onClick="@{()->viewModel.catClick(item.catId)}"
-            android:textSize="@dimen/feed_carousel_slide_tag_textSize" />
-
-        <TextView
-            android:id="@+id/feed_carousel_slide_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_base"
+        <ImageView
+            android:id="@+id/feed_carousel_slide_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            android:adjustViewBounds="true"
+            android:alpha="@dimen/feed_carousel_slide_alpha"
             android:gravity="center"
-            android:lineSpacingMultiplier="0.9"
-            android:fontFamily="@font/open_sans_light"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/feed_carousel_slide_title_textSize"
-            android:text="@{item.title}"
-            android:textStyle="bold" />
-    </LinearLayout>
-</FrameLayout>
+            android:src="@drawable/bg_exploremore_en"
+            srcImageUrl="@{item.imageUrl}"
+            android:scaleType="centerCrop" />
+
+
+        <LinearLayout
+            android:id="@+id/feed_carousel_slide_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/feed_carousel_short_slide_wrapper_marginTop"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/padding_base_2x"
+            android:paddingEnd="@dimen/padding_base_2x"
+            android:paddingBottom="@dimen/padding_base_4x">
+
+            <TextView
+                android:id="@+id/feed_carousel_slide_tag"
+                style="@style/FeedCarouselTagLabel"
+                android:fontFamily="@font/open_sans_light"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_base"
+                android:text="@{item.catName}"
+                android:onClick="@{()->viewModel.catClick(item.catId)}"
+                android:textSize="@dimen/feed_carousel_slide_tag_textSize" />
+
+            <TextView
+                android:id="@+id/feed_carousel_slide_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_base"
+                android:gravity="center"
+                android:lineSpacingMultiplier="0.9"
+                android:fontFamily="@font/open_sans_light"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/feed_carousel_slide_title_textSize"
+                android:text="@{item.title}"
+                android:textStyle="bold" />
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_gravity="center"
+                android:onClick="@{()->viewModel.postClick(item)}"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                goneUnless="@{item.postType==PostType.VIDEO}"
+                android:src="@drawable/ic_play_circle_outline_black_24dp"
+                android:layout_height="40dp" />
+        </LinearLayout>
+    </FrameLayout>
 </layout>
